# intreview

./: README.md  requirements.md  roadmap.md
BE/: BACKEND.md  README.md  connection_manager.py  requirements.txt
BE/app/: README.md  pyproject.toml
BE/app/src/app/: main.py
